# ROS-Multi-Machine-Basics

./: README.md
Service/client_service/: CMakeLists.txt  package.xml
Service/client_service/include/client_service/: client.h
Service/client_service/src/: client.cpp  main.cpp
Service/server_service/: CMakeLists.txt  package.xml
Service/server_service/include/server_service/: server.h
Service/server_service/launch/: Avg_service.launch
Service/server_service/src/: main.cpp  server.cpp
Service/server_service/srv/: feedback.srv
Topic/client_topic/: CMakeLists.txt  package.xml
Topic/client_topic/include/client_topic/: client.h
Topic/client_topic/src/: client.cpp  main.cpp
Topic/server_topic/: CMakeLists.txt  package.xml
Topic/server_topic/include/server_topic/: server.h
Topic/server_topic/launch/: Avg.launch
Topic/server_topic/msg/: AverageRequest.msg  AverageResponse.msg
Topic/server_topic/src/: main.cpp  server.cpp
